objects/iAdvize__Conversation__c.object
<CustomObject>
    <fields>
        <fullName>CS_Team__c</fullName>
        <formula>IF( iAdvize__operator__r.UserRole.Name = &apos;Japan&apos;, &apos;JP&apos;,
IF( iAdvize__operator__r.UserRole.Name = &apos;NorthAmerica&apos;, &apos;US&apos;,
&apos;EU&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Flag__c</fullName>
        <formula>Case_number__r.Country_Pictogram__c</formula>
        <label>Market Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Case_number__r.Market__c)</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_conversation__c</fullName>
        <formula>IF(iAdvize__operator__r.Id = $User.Id, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My conversation?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>